feat: create table for users

--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/users/users.component.html
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/users/users.component.html
@@ -1,2 +1,2 @@
-<p>users works!</p>
-<app-table></app-table>
+<app-table #tableServices [config]="usersConfig" [data]="usersDate" [isLoadingTable]="false" (action)="''">
+</app-table>
