--- a/server/front/TFGscada-app/src/app/shared/component/table/table.component.html
+++ b/server/front/TFGscada-app/src/app/shared/component/table/table.component.html
@@ -1,8 +1,235 @@
-<p>table works!</p>
-
-<mat-form-field appearance="legacy">
-    <mat-label>Legacy form field</mat-label>
-    <input matInput placeholder="Placeholder">
-    <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-    <mat-hint>Hint</mat-hint>
+<mat-form-field *ngIf="config.filter">
+    <mat-label>Filtro</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Filtro" #input />
 </mat-form-field>
+
+<div class="mat-elevation-z8" [ngClass]="{ sticky: config.stickyHeader === true }"
+    [style.max-height]="config.stickyHeader ? config.maxHeight : 'auto'">
+    <div class="container">
+        <div class="loading-shade" *ngIf="isLoadingTable">
+            <mat-spinner *ngIf="isLoadingTable"></mat-spinner>
+        </div>
+        <div class="table-container">
+            <table mat-table [dataSource]="dataSource" matSort [matSortDisabled]="!config.sort" class="full">
+                <ng-container *ngFor="let column of config.columns">
+                    <ng-container *ngIf="column.type === 'text'" [matColumnDef]="column.prop" [sticky]="column.sticky">
+                        <th [style.width]="column.width" mat-header-cell *matHeaderCellDef mat-sort-header
+                            class="header-cell">
+                            {{ column.name }}
+                        </th>
+                        <td mat-cell class="cell" *matCellDef="let row">
+                            <p *ngIf="!column.editable; else editableTemplate" [class]="column.class">
+                                {{ row[column.prop] }}
+                            </p>
+                            <ng-template #editableTemplate>
+                                <div #editable (click)="setEditable(editable)">
+                                    <div class="cell-content"
+                                        [style.height]="row[column.prop] ? 'fit-content' : '2rem'">
+                                        <p *ngIf="editable !== editing; else editingInput">
+                                            {{ row[column.prop] }}
+                                        </p>
+                                    </div>
+                                    <ng-template #editingInput>
+                                        <mat-form-field appearance="outline" class="edit-field">
+                                            <input #input matInput [value]="row[column.prop] || ''"
+                                                (keyup)="change(input, $event)"
+                                                (focusout)="lostFocus(row, column.prop, input)" />
+                                        </mat-form-field>
+                                    </ng-template>
+                                </div>
+                            </ng-template>
+                        </td>
+                    </ng-container>
+
+                    <ng-container *ngIf="column.type === 'icon'" [matColumnDef]="column.prop" [sticky]="column.sticky">
+                        <th [style.width]="column.width" mat-header-cell *matHeaderCellDef mat-sort-header
+                            class="header-cell">
+                            {{ column.name }}
+                        </th>
+                        <td mat-cell class="cell" *matCellDef="let row">
+                            <span class="material-icons">{{ row[column.prop] }}</span>
+                        </td>
+                    </ng-container>
+
+                    <ng-container *ngIf="column.type === 'button'" [matColumnDef]="column.prop"
+                        [sticky]="column.sticky">
+                        <th [style.width]="column.width" mat-header-cell mat-sort-header *matHeaderCellDef
+                            class="header-cell">
+                            {{ column.name }}
+                        </th>
+                        <td mat-cell class="cell" *matCellDef="let row">
+                            <button mat-flat-button [style.width]="column.width"
+                                (click)="columnButton($event, row, column.prop)" [style.color]="
+                    !row[column.prop].disabled
+                      ? row[column.prop].color
+                      : '#a6a6a6'
+                  " [style.width]="row[column.prop].width" [style.background-color]="
+                    !row[column.prop].disabled
+                      ? row[column.prop].backgroundColor
+                      : '#dcdcdc'
+                  " [disabled]="row[column.prop].disabled">
+                                {{ row[column.prop].text }}
+                            </button>
+                        </td>
+                    </ng-container>
+
+                    <ng-container *ngIf="column.type === 'checkbox'" [matColumnDef]="column.prop"
+                        [sticky]="column.sticky">
+                        <th [style.width]="column.width" mat-header-cell *matHeaderCellDef mat-sort-header
+                            class="header-cell"></th>
+                        <td mat-cell class="cell" *matCellDef="let row">
+                            <mat-checkbox [(ngModel)]="row[column.prop]" color="primary" (change)="check()">
+                            </mat-checkbox>
+                        </td>
+                    </ng-container>
+
+                    <ng-container *ngIf="column.type === 'date'" [matColumnDef]="column.prop" [sticky]="column.sticky">
+                        <th [style.width]="column.width" mat-header-cell *matHeaderCellDef mat-sort-header
+                            class="header-cell">
+                            {{ column.name }}
+                        </th>
+                        <td mat-cell class="cell" *matCellDef="let row">
+                            <p *ngIf="row[column.prop]; else noDate">
+                                {{ row[column.prop] | date: column.datePipe }}
+                            </p>
+                            <ng-template #noDate>-</ng-template>
+                        </td>
+                    </ng-container>
+
+                    <ng-container *ngIf="column.type === 'colorText'" [matColumnDef]="column.prop"
+                        [sticky]="column.sticky">
+                        <th [style.width]="column.width" mat-header-cell *matHeaderCellDef mat-sort-header
+                            class="header-cell">
+                            {{ column.name }}
+                        </th>
+                        <td mat-cell class="cell" *matCellDef="let row">
+                            <p [style.color]="row[column.prop].color" *ngIf="!column.editable; else colorEditable">
+                                {{ row[column.prop].text }}
+                            </p>
+                            <ng-template #colorEditable>
+                                <div #editable (click)="setEditable(editable)">
+                                    <div class="cell-content" [style.height]="'2rem'">
+                                        <p *ngIf="editable !== editing; else editingInput"
+                                            [style.color]="row[column.prop].color">
+                                            {{ row[column.prop].text }}
+                                        </p>
+                                    </div>
+                                    <ng-template #editingInput>
+                                        <mat-form-field appearance="outline" class="edit-field">
+                                            <input #input matInput [value]="row[column.prop].text || ''"
+                                                (keyup)="change(input, $event)"
+                                                (focusout)="lostFocus(row, column.prop, input)" />
+                                        </mat-form-field>
+                                    </ng-template>
+                                </div>
+                            </ng-template>
+                        </td>
+                    </ng-container>
+                    <ng-container *ngIf="column.type === 'actions'" matColumnDef="actionButtons">
+                        <th [style.width]="column.width" class="header-cell" mat-header-cell *matHeaderCellDef>
+                            Acciones
+                        </th>
+                        <td mat-cell *matCellDef="let row">
+                            <button *ngFor="let action of row.actions; let i = index" class="action-button"
+                                mat-raised-button [style.backgroundColor]="
+                    action.disabled ? '#dcdcdc' : action.backgroundColor
+                  " [style.color]="action.disabled ? '#a6a6a6' : action.color" [style.width]="action.width"
+                                [disabled]="action.disabled" (click)="actions($event, action, row, i)">
+                                {{ action.text }}
+                            </button>
+                        </td>
+                    </ng-container>
+                    <ng-container *ngIf="column.type === 'list'" [matColumnDef]="column.prop" [sticky]="column.sticky">
+                        <th [style.width]="column.width" mat-header-cell *matHeaderCellDef mat-sort-header
+                            class="header-cell">
+                            {{ column.name }}
+                        </th>
+                        <td mat-cell class="cell" *matCellDef="let row">
+                            <mat-chip-list class="chip-list">
+                                <mat-chip *ngFor="let item of row[column.prop]" color="primary">{{ item }}</mat-chip>
+                            </mat-chip-list>
+                        </td>
+                    </ng-container>
+                </ng-container>
+
+                <ng-container *ngIf="config.actions" matColumnDef="actions">
+                    <th mat-header-cell *matHeaderCellDef class="header-cell">
+                        <!--
+              Actions
+              -->
+                        Details
+                    </th>
+                    <td mat-cell *matCellDef="let row">
+                        <div class="action-buttons">
+                            <ng-container *ngFor="let action of config.actions">
+                                <ng-container [ngSwitch]="action.type">
+                                    <button *ngSwitchCase="'mat-raised-button'" mat-raised-button
+                                        [color]="action.themeColor" [style.background-color]="action.backgroundColor"
+                                        [style.color]="action.color" mat-button
+                                        (click)="buttonAction($event, row, action.name)">
+                                        {{ action.tooltip }}
+                                        <span class="material-icons">{{ action.icon }}</span>
+                                    </button>
+                                    <button *ngSwitchCase="'mat-stroked-button'" mat-stroked-button
+                                        [color]="action.themeColor" [style.background-color]="action.backgroundColor"
+                                        [style.color]="action.color" mat-button
+                                        (click)="buttonAction($event, row, action.name)">
+                                        {{ action.tooltip
+                                        }}<span class="material-icons">{{ action.icon }}</span>
+                                    </button>
+                                    <button *ngSwitchCase="'mat-flat-button'" mat-flat-button
+                                        [color]="action.themeColor" [style.background-color]="action.backgroundColor"
+                                        [style.color]="action.color" mat-button
+                                        (click)="buttonAction($event, row, action.name)">
+                                        {{ action.tooltip
+                                        }}<span class="material-icons">{{ action.icon }}</span>
+                                    </button>
+                                    <button *ngSwitchCase="'mat-icon-button'" mat-icon-button
+                                        [color]="action.themeColor" [style.background-color]="action.backgroundColor"
+                                        [style.color]="action.color" mat-button
+                                        (click)="buttonAction($event, row, action.name)">
+                                        <span class="material-icons" [matTooltip]="action.tooltip || ''">{{ action.icon
+                                            }}</span>
+                                    </button>
+                                    <button *ngSwitchCase="'mat-fab'" mat-fab [color]="action.themeColor"
+                                        [style.background-color]="action.backgroundColor" [style.color]="action.color"
+                                        mat-button (click)="buttonAction($event, row, action.name)">
+                                        {{ action.tooltip
+                                        }}<span class="material-icons">{{ action.icon }}</span>
+                                    </button>
+                                    <button *ngSwitchCase="'mat-mini-fab'" mat-mini-fab [color]="action.themeColor"
+                                        [style.background-color]="action.backgroundColor" [style.color]="action.color"
+                                        mat-button (click)="buttonAction($event, row, action.name)">
+                                        {{ action.tooltip
+                                        }}<span class="material-icons">{{ action.icon }}</span>
+                                    </button>
+                                    <button *ngSwitchDefault mat-button [color]="action.themeColor"
+                                        [style.background-color]="action.backgroundColor" [style.color]="action.color"
+                                        mat-button (click)="buttonAction($event, row, action.name)">
+                                        {{ action.tooltip
+                                        }}<span class="material-icons">{{ action.icon }}</span>
+                                    </button>
+                                </ng-container>
+                            </ng-container>
+                        </div>
+                    </td>
+                </ng-container>
+
+                <tr mat-header-row class="header" *matHeaderRowDef="displayedColumns; sticky: config.stickyHeader"></tr>
+                <tr mat-row (click)="rowClicked.emit(row)"
+                    (contextmenu)="contextMenu.emit({ event: $event, object: row })"
+                    [class]="areRowClickable ? 'clickable table-row' : 'table-row'"
+                    *matRowDef="let row; columns: displayedColumns"></tr>
+
+                <tr class="mat-row" *matNoDataRow>
+                    <td class="mat-cell" [colSpan]="config.columns.length">
+                        <p class="no-data">No results found</p>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
+</div>
+
+<mat-paginator class="full mat-elevation-z8" *ngIf="config.paginator" [pageSizeOptions]="[10, 15, 25, 100]"
+    showFirstLastButtons></mat-paginator>
