--- a/server/front/TFGscada-app/src/app/shared/component/table/table.component.html
+++ b/server/front/TFGscada-app/src/app/shared/component/table/table.component.html
@@ -154,10 +154,7 @@
 
                 <ng-container *ngIf="config.actions" matColumnDef="actions">
                     <th mat-header-cell *matHeaderCellDef class="header-cell">
-                        <!--
-              Actions
-              -->
-                        Details
+                        Acciones
                     </th>
                     <td mat-cell *matCellDef="let row">
                         <div class="action-buttons">
