feat: create dialog for manipulate row

--- a/server/front/TFGscada-app/src/app/shared/component/dialog/dialog.component.html
+++ b/server/front/TFGscada-app/src/app/shared/component/dialog/dialog.component.html
@@ -1,1 +1,25 @@
-<p>dialog works!</p>
+<h2 mat-dialog-title>{{ data.title }}</h2>
+<mat-dialog-content>
+    <form novalidate [formGroup]="form">
+        <div class="columns">
+            <mat-form-field *ngFor="let column of data.columns">
+                <mat-label>{{ column.name }}</mat-label>
+                <input matInput *ngIf="column.type == 'text'" type="{{column.type}}"
+                    formControlName="{{ column.prop }}">
+                <input matInput *ngIf="column.type == 'email'" type="{{column.type}}"
+                    formControlName="{{ column.prop }}" email>
+                <mat-select *ngIf="column.type == 'combo'" formControlName="{{ column.prop }}">
+                    <mat-option *ngFor="let value of column.arrayValues; index as i;"
+                        value="{{column.arrayShows != undefined ? column.arrayShows[i]:''}}">
+                        {{column.arrayShows != undefined ? column.arrayShows[i]:''}}</mat-option>
+                </mat-select>
+
+            </mat-form-field>
+        </div>
+    </form>
+
+</mat-dialog-content>
+<mat-dialog-actions>
+    <button mat-button mat-dialog-close>Cancel</button>
+    <button mat-button (click)="save()">Install</button>
+</mat-dialog-actions>
