feat: continue with the dialog

--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/users/users.component.html
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/users/users.component.html
@@ -6,7 +6,7 @@
         <button mat-raised-button (click)="clearFilter($event)">
             <mat-icon>close</mat-icon>
         </button>
-        <button mat-raised-button>
+        <button mat-raised-button (click)="addPerson()">
             <mat-icon>person_add</mat-icon>
         </button>
     </div>
