--- a/server/front/TFGscada-app/src/app/features/dashboard/dashboard.component.html
+++ b/server/front/TFGscada-app/src/app/features/dashboard/dashboard.component.html
@@ -10,9 +10,11 @@
       <mat-icon>logout</mat-icon>
     </button>
     -->
-    <!-- <app-profile-card></app-profile-card> --> 
+    <!-- <app-profile-card></app-profile-card> -->
     <h3 [style.margin-left]="'auto'" [style.margin-right]="'3em'">{{this.auth.user.user_name}}</h3>
-    <button mat-raised-button  matTooltip="Deslogear" (click)="logOut()"><mat-icon class="logout">launch</mat-icon></button>
+    <button mat-raised-button matTooltip="Deslogear" (click)="logOut()">
+      <mat-icon class="logout">launch</mat-icon>
+    </button>
   </mat-toolbar>
   <mat-drawer-container autosize>
     <mat-drawer #drawer class="sidenav" mode="side">
@@ -21,13 +23,9 @@
       <mat-divider></mat-divider>
       -->
 
-      <mat-nav-list  [disableRipple]="true">
-        <mat-list-item
-          *ngFor="let item of sideNavItems"
-          [routerLink]="item.link"
-          (click)="msg=item.text;"
-          routerLinkActive="active-list-item"
-        >
+      <mat-nav-list [disableRipple]="true">
+        <mat-list-item *ngFor="let item of sideNavItems" [routerLink]="item.link" (click)="msg=item.text;"
+          routerLinkActive="active-list-item">
           <mat-icon class="list-item-icon">{{ item.icon }}</mat-icon>
           <span class="list-item-text">{{ item.text }}</span>
         </mat-list-item>
