--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/places/places.component.html
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/places/places.component.html
@@ -1,1 +1,5 @@
-<p>places works!</p>
+<mat-tab-group animationDuration="0ms">
+    <mat-tab label="Datos"> Datos </mat-tab>
+    <mat-tab label="Mapa"> Mapa </mat-tab>
+    <mat-tab label="Lugar"> Lugar </mat-tab>
+</mat-tab-group>
