refactor: create tableModule

--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/places/places.component.html
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/places/places.component.html
@@ -1,6 +1,10 @@
 <mat-tab-group animationDuration="0ms">
     <mat-tab label="Datos"> Datos
-
+        <!--
+        <app-table #tablePlaces [config]="placesConfig" [data]="placesDate" [isLoadingTable]="false"
+            (action)="tableEvent($event)">
+        </app-table>
+-->
     </mat-tab>
     <mat-tab label="Mapa"> Mapa </mat-tab>
     <mat-tab label="Lugar"> Lugar </mat-tab>
