--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/places/place-measurements/place-measurements.component.html
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/places/place-measurements/place-measurements.component.html
@@ -1,1 +1,5 @@
 <p>place-measurements works!</p>
+
+<app-table #tablePlaces [config]="measurementsConfig" [data]="lastMeasurements" [isLoadingTable]="false"
+    (action)="tableEvent($event)">
+</app-table>
