--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/places/places.component.html
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/places/places.component.html
@@ -8,6 +8,6 @@
         <app-map></app-map>
     </mat-tab>
     <mat-tab [label]="this.tabs[2]">
-        <app-place-measurements></app-place-measurements>
+        <app-place-measurements [lastMeasurements]="lastMeasurements"></app-place-measurements>
     </mat-tab>
 </mat-tab-group>
