feat: create outputs

--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/places/places.component.html
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/places/places.component.html
@@ -10,4 +10,7 @@
     <mat-tab [label]="this.tabs[2]">
         <app-place-measurements [lastMeasurements]="lastMeasurements"></app-place-measurements>
     </mat-tab>
+    <mat-tab [label]="this.tabs[3]">
+        <app-outputs></app-outputs>
+    </mat-tab>
 </mat-tab-group>
