--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/places/outputs/outputs.component.css
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/places/outputs/outputs.component.css
@@ -1,3 +1,11 @@
+.data {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  max-width: 24em;
+  margin-top: 1em;
+}
+
 .container {
   display: flex;
   flex-direction: column;
