--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/places/places.component.html
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/places/places.component.html
@@ -1,4 +1,4 @@
-<mat-tab-group animationDuration="0ms" [selectedIndex]="selected.value">
+<mat-tab-group animationDuration="0ms" [(selectedIndex)]="tabSelected">
     <mat-tab [label]="this.tabs[0]">
         <app-table #tablePlaces [config]="placesConfig" [data]="placesDate" [isLoadingTable]="false"
             (action)="tableEvent($event)">
@@ -10,7 +10,9 @@
     <mat-tab [label]="this.tabs[2]">
         <app-place-measurements [lastMeasurements]="lastMeasurements"></app-place-measurements>
     </mat-tab>
-    <mat-tab [label]="this.tabs[3]">
-        <app-outputs></app-outputs>
+    <mat-tab [label]="this.tabs[3]" [disabled]="disableOutput">
+        <ng-template matTabContent>
+            <app-outputs [place]="this.placeSelected"></app-outputs>
+        </ng-template>
     </mat-tab>
 </mat-tab-group>
