feat: begin dialog to insert places

--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/places/places.component.html
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/places/places.component.html
@@ -9,7 +9,7 @@
                     <mat-icon>close</mat-icon>
                 </button>
                 <button mat-raised-button (click)="addPlace()">
-                    <mat-icon>person_add</mat-icon>
+                    <mat-icon>add</mat-icon>
                 </button>
             </div>
         </div>
