--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/places/outputs/outputs.component.scss
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/places/outputs/outputs.component.scss
@@ -9,19 +9,21 @@
 .container {
     display: flex;
     flex-direction: column;
-    align-items: stretch;
+    align-items: center;
     margin: auto;
-    max-width: 14em;
+    max-width: 24em;
+    min-width: 20em;
     margin-top: 5em;
     transform: scale(1.5);
     margin-bottom: 3em;
   }
   
   .output{
+    width: 100%;
     display: flex;
     align-items: stretch; 
     justify-content: space-between;
-    max-width: 12em;
+    //max-width: 12em;
     margin: .2em;
   }
 
@@ -51,4 +53,12 @@
       }
     }
   }
+}
+
+.sended{
+  width: 33%;
+}
+
+.label{
+  width: 33%;
 }
