--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/places/outputs/outputs.component.html
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/places/outputs/outputs.component.html
@@ -1,15 +1,26 @@
-<div class="data">
-    <h1>Nombre: {{ place?.identifier }}</h1>
-    <h1>Dirección: {{ place?.address }}</h1>
+<div class="selectPlace">
+    <mat-form-field appearance="fill">
+        <mat-label>Identificador del lugar</mat-label>
+        <mat-select [(value)]="selected" (selectionChange)="fetchOutputs()">
+            <mat-option *ngFor="let place of this.allPlaces" value="{{place.id}}">{{place.identifier}}</mat-option>
+        </mat-select>
+    </mat-form-field>
 </div>
 
-<div class="container">
-    <div *ngFor="let output of outputs; index as i; first as isFirst" class="output">
-        <span class="label">{{ this.outputsLabels[i] }}</span>
-        <mat-slide-toggle class="example-margin" [color]="color" [checked]="output.value" [disabled]="disabled"
-            (change)="change($event,i)">
-        </mat-slide-toggle>
-        <div class="sended">{{output.sended ? 'Enviado':'No enviado' }}</div>
+<div>
+    <div class="data">
+        <h1>Nombre: {{ place?.identifier }}</h1>
+        <h1>Dirección: {{ place?.address }}</h1>
+    </div>
 
+    <div class="container">
+        <div *ngFor="let output of outputs; index as i; first as isFirst" class="output">
+            <span class="label">{{ this.outputsLabels[i] }}</span>
+            <mat-slide-toggle class="example-margin" [color]="color" [checked]="output.value" [disabled]="disabled"
+                (change)="change($event,i)">
+            </mat-slide-toggle>
+            <div class="sended">{{output.sended ? 'Enviado':'No enviado' }}</div>
+
+        </div>
     </div>
 </div>
