--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/places/places.component.html
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/places/places.component.html
@@ -25,7 +25,7 @@
     </mat-tab>
     <mat-tab [label]="this.tabs[3]" [disabled]="disableOutput">
         <ng-template matTabContent>
-            <app-outputs [place]="this.placeSelected"></app-outputs>
+            <app-outputs [place]="this.placeSelected" [allPlaces]="this.placesDate"></app-outputs>
         </ng-template>
     </mat-tab>
 </mat-tab-group>
