--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/places/measurements-graph/measurements-graph.component.html
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/places/measurements-graph/measurements-graph.component.html
@@ -1,1 +1,5 @@
 <p>measurements-graph works!</p>
+
+<ngx-charts-linear-gauge [view]="view" [value]="value" [previousValue]="previousValue" (select)="onSelect($event)"
+    [units]="units">
+</ngx-charts-linear-gauge>
