--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/places/measurements-graph/measurements-graph.component.html
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/places/measurements-graph/measurements-graph.component.html
@@ -1,1 +1,9 @@
-<p>measurements-graph works!</p>
+<div class="grap-container">
+
+    <ngx-charts-line-chart [view]="view" [legend]="legend" [showXAxisLabel]="showXAxisLabel"
+        [showYAxisLabel]="showYAxisLabel" [xAxis]="xAxis" [yAxis]="yAxis" [xAxisLabel]="xAxisLabel"
+        [yAxisLabel]="yAxisLabel" [timeline]="timeline" [results]="multi" (select)="onSelect($event)"
+        (activate)="onActivate($event)" (deactivate)="onDeactivate($event)">
+    </ngx-charts-line-chart>
+
+</div>
