--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/places/places.component.html
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/places/places.component.html
@@ -18,7 +18,7 @@
         </app-table>
     </mat-tab>
     <mat-tab [label]="this.tabs[1]">
-        <app-measurements-graph></app-measurements-graph>
+        <app-measurements-graph [inputMultiple]="true"></app-measurements-graph>
     </mat-tab>
     <mat-tab [label]="this.tabs[2]">
         <app-place-measurements [lastMeasurements]="lastMeasurements"></app-place-measurements>
