--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/places/measurements-graph/measurements-graph.component.css
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/places/measurements-graph/measurements-graph.component.css
@@ -20,7 +20,7 @@
 }
 
 .controls {
-  margin: 2em;
+  margin: 1em;
   display: flex;
   flex-direction: column;
 }
@@ -37,4 +37,9 @@
 .spinner {
   margin: auto;
   margin-top: 6em;
+}
+
+.showTime {
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
