feat: añadir tabla de acciones realizadas

--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/actions/actions.component.html
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/actions/actions.component.html
@@ -1,1 +1,6 @@
 <p>actions works!</p>
+
+
+<app-table #tablePlaces [config]="actionsConfig" [data]="outputs" [isLoadingTable]="false"
+    (action)="tableEvent($event)">
+</app-table>
