feat: load data and create table

--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/alarms/alarms.component.html
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/alarms/alarms.component.html
@@ -1,1 +1,4 @@
 <p>alarms works!</p>
+<app-table #tableAlarms [config]="alarmsConfig" [data]="alarms" [isLoadingTable]="isLoadingTable"
+    (action)="tableEvent($event)">
+</app-table>
