--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/alarms/alarms.component.html
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/alarms/alarms.component.html
@@ -1,3 +1,47 @@
+<div class="select">
+    <mat-form-field appearance="fill">
+        <mat-label>Enter a date range</mat-label>
+        <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
+            <input matStartDate formControlName="start" placeholder="Start date">
+            <input matEndDate formControlName="end" placeholder="End date">
+        </mat-date-range-input>
+        <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
+        <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-date-range-picker #picker></mat-date-range-picker>
+
+        <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
+        <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+        <mat-label>Sensor</mat-label>
+        <mat-select [(value)]="selectedSensor" (selectionChange)="changeFilter()">
+            <mat-option value="{{ 'TODOS' }}">TODOS</mat-option>
+            <mat-option *ngFor="let sensor of this.sensors" value="{{sensor.id}}">{{sensor.name}}</mat-option>
+        </mat-select>
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+        <mat-label>Usuario</mat-label>
+        <mat-select [(value)]="selectedUser" (selectionChange)="changeFilter()">
+            <mat-option value="{{ 'TODOS' }}">TODOS</mat-option>
+            <mat-option *ngFor="let user of this.users" value="{{user.id}}">{{user.name}}</mat-option>
+        </mat-select>
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+        <mat-label>Identificador del lugar</mat-label>
+        <mat-select [(value)]="selectedPlace" (selectionChange)="changeFilter()">
+            <mat-option value="{{ 'TODOS' }}">TODOS</mat-option>
+            <mat-option *ngFor="let place of this.places" value="{{place.id}}">{{place.identifier}}</mat-option>
+        </mat-select>
+    </mat-form-field>
+
+
+
+
+
+</div>
+
+
 <app-table #tableAlarms [config]="alarmsConfig" [data]="alarms" [isLoadingTable]="isLoadingTable"
     (action)="tableEvent($event)">
 </app-table>
