--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/alarms/alarms.component.css
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/alarms/alarms.component.css
@@ -2,4 +2,11 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  margin-bottom: 1em;
+}
+
+::ng-deep .mat-form-field-type-mat-date-range-input .mat-form-field-infix {
+  width: 200px;
+  display: flex;
+  align-items: center;
 }
