--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/alarms/alarms.component.html
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/alarms/alarms.component.html
@@ -1,16 +1,22 @@
 <div class="select">
-    <mat-form-field appearance="fill">
-        <mat-label>Enter a date range</mat-label>
-        <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
-            <input matStartDate formControlName="start" placeholder="Start date">
-            <input matEndDate formControlName="end" placeholder="End date">
+    <mat-form-field class="example-form-field" appearance="fill">
+        <mat-label>Rango para la fecha de inicio</mat-label>
+        <mat-date-range-input [formGroup]="rangeInit" [rangePicker]="campaignOnePicker">
+            <input matStartDate placeholder=" Start date" formControlName="start" (dateChange)="changeFilter()">
+            <input matEndDate placeholder="End date" formControlName="end" (dateChange)="changeFilter()">
         </mat-date-range-input>
-        <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
-        <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-date-range-picker #picker></mat-date-range-picker>
-
-        <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
-        <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
+        <mat-hint>DD/MM/YYYY – DD/MM/YYYY</mat-hint>
+        <mat-datepicker-toggle matIconSuffix [for]="campaignOnePicker"></mat-datepicker-toggle>
+        <mat-date-range-picker #campaignOnePicker></mat-date-range-picker>
+    </mat-form-field>
+    <mat-form-field class="example-form-field" appearance="fill">
+        <mat-label>Rango para la fecha de fin</mat-label>
+        <mat-date-range-input [formGroup]="rangeEnd" [rangePicker]="campaignOnePicker2">
+            <input matStartDate placeholder=" Start date" formControlName="start" (dateChange)="changeFilter()">
+            <input matEndDate placeholder="End date" formControlName="end" (dateChange)="changeFilter()">
+        </mat-date-range-input>
+        <mat-datepicker-toggle matIconSuffix [for]="campaignOnePicker2"></mat-datepicker-toggle>
+        <mat-date-range-picker #campaignOnePicker2></mat-date-range-picker>
     </mat-form-field>
 
     <mat-form-field appearance="fill">
@@ -35,13 +41,15 @@
         </mat-select>
     </mat-form-field>
 
-
+    <button mat-fab color="primary" aria-label="Clear" (click)="clear()">
+        <mat-icon>undo</mat-icon>
+    </button>
 
 
 
 </div>
 
 
-<app-table #tableAlarms [config]="alarmsConfig" [data]="alarms" [isLoadingTable]="isLoadingTable"
+<app-table #tableAlarms [config]="alarmsConfig" [data]="alarmsView" [isLoadingTable]="isLoadingTable"
     (action)="tableEvent($event)">
 </app-table>
