--- a/server/front/TFGscada-app/src/app/shared/component/table/table.component.html
+++ b/server/front/TFGscada-app/src/app/shared/component/table/table.component.html
@@ -216,7 +216,8 @@
                 <tr mat-row (click)="rowClicked.emit(row)"
                     (contextmenu)="contextMenu.emit({ event: $event, object: row })"
                     [class]="areRowClickable ? 'clickable-table-row' : 'table-row'"
-                    *matRowDef="let row; columns: displayedColumns"></tr>
+                    [style.background-color]="row.color?row.color:''" *matRowDef="let row; columns: displayedColumns">
+                </tr>
 
                 <tr class="mat-row" *matNoDataRow>
                     <td class="mat-cell" [colSpan]="config.columns.length">
