feat: begin translate

--- a/server/front/TFGscada-app/src/app/features/dashboard/dashboard.component.css
+++ b/server/front/TFGscada-app/src/app/features/dashboard/dashboard.component.css
@@ -1,4 +1,4 @@
-
+@use '@angular/material' as mat;
 .dashboard-container {
   min-height: 90%;
   display: flex;
@@ -87,4 +87,6 @@ mat-toolbar {
   background-color: transparent;
 }
 
-
+.changeLang {
+  margin-right: 2em;
+}
